--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,6 +100,22 @@ a {
   transform: translate(-50%, -50%);
 }
 
+.light-pattern {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0);
+}
+
+.objects {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
