--- a/src/styles/tw-output.css
+++ b/src/styles/tw-output.css
@@ -474,24 +474,21 @@ video {
 .relative {
   position: relative;
 }
-.left-10 {
-  left: 2.5rem;
+.left-0 {
+  left: 0px;
 }
-.left-16 {
-  left: 4rem;
-}
-.right-16 {
-  right: 4rem;
+.right-0 {
+  right: 0px;
 }
 .top-0 {
   top: 0px;
 }
-.top-10 {
-  top: 2.5rem;
+.z-negative {
+  z-index: -1;
 }
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -521,9 +518,6 @@ video {
 .ml-3 {
   margin-left: 0.75rem;
 }
-.mr-44 {
-  margin-right: 11rem;
-}
 .mr-5 {
   margin-right: 1.25rem;
 }
@@ -539,6 +533,9 @@ video {
 .flex {
   display: flex;
 }
+.hidden {
+  display: none;
+}
 .h-16 {
   height: 4rem;
 }
@@ -548,11 +545,20 @@ video {
 .w-full {
   width: 100%;
 }
+.max-w-container {
+  max-width: 1747px;
+}
+.max-w-content {
+  max-width: 1400px;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
 .flex-col {
   flex-direction: column;
+}
+.items-start {
+  align-items: flex-start;
 }
 .items-end {
   align-items: flex-end;
@@ -560,14 +566,14 @@ video {
 .items-center {
   align-items: center;
 }
-.justify-end {
-  justify-content: flex-end;
-}
 .justify-center {
   justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -614,8 +620,33 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(98 95 251 / var(--tw-bg-opacity));
 }
+.bg-subscribe {
+  background-image: url(/images/footer/subscribebg.png);
+}
+.bg-cover {
+  background-size: cover;
+}
+.bg-center {
+  background-position: center;
+}
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
 .p-5 {
   padding: 1.25rem;
+}
+.p-footerLinks {
+  padding: 100px 0px 50px 0px;
+}
+.p-steps {
+  padding: 400px 1rem 0px 1rem;
+}
+.p-subscribe {
+  padding: 30px 20px 30px 20px;
+}
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 .px-16 {
   padding-left: 4rem;
@@ -625,6 +656,10 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -632,10 +667,6 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-}
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -645,14 +676,9 @@ video {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.pb-20 {
-  padding-bottom: 5rem;
-}
-.pb-24 {
-  padding-bottom: 6rem;
-}
-.pb-40 {
-  padding-bottom: 10rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -694,6 +720,9 @@ video {
   font-size: 3rem;
   line-height: 1;
 }
+.text-header {
+  font-size: 47px;
+}
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -701,6 +730,9 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-subscribe {
+  font-size: 37px;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -718,6 +750,9 @@ video {
 .leading-none {
   line-height: 1;
 }
+.leading-normal {
+  line-height: 1.5;
+}
 .text-content {
   --tw-text-opacity: 1;
   color: rgb(78 78 78 / var(--tw-text-opacity));
@@ -733,4 +768,130 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+@media (min-width: 640px) {
+
+  .sm\:text-headerSm {
+    font-size: 60px;
+  }
+
+  .sm\:text-subscribeSm {
+    font-size: 50px;
+  }
+}
+@media (min-width: 768px) {
+
+  .md\:text-subscribeMd {
+    font-size: 43px;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+@media (min-width: 1024px) {
+
+  .lg\:mx-14 {
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:w-min {
+    width: -moz-min-content;
+    width: min-content;
+  }
+
+  .lg\:min-w-subscribeInputLg {
+    min-width: 347px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .lg\:p-footerLinksLg {
+    padding: 107px 0px 263px 0px;
+  }
+
+  .lg\:p-stepsLg {
+    padding: 490px 0px 10rem 0px;
+  }
+
+  .lg\:p-subscribeLg {
+    padding: 94px 55px;
+  }
+
+  .lg\:pb-20 {
+    padding-bottom: 5rem;
+  }
+
+  .lg\:text-headerLg {
+    font-size: 80px;
+  }
+
+  .lg\:text-subscribeLg {
+    font-size: 55px;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .xl\:mx-20 {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
+  .xl\:mr-44 {
+    margin-right: 11rem;
+  }
+
+  .xl\:h-subscribe {
+    height: 150px;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:bg-contain {
+    background-size: contain;
+  }
+
+  .xl\:p-footerLinksXl {
+    padding: 107px 2rem 263px 2rem;
+  }
+
+  .xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .xl\:pt-40 {
+    padding-top: 10rem;
+  }
 }
