show about component; responsive

--- a/src/styles/tw-output.css
+++ b/src/styles/tw-output.css
@@ -620,8 +620,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(98 95 251 / var(--tw-bg-opacity));
 }
+.bg-about {
+  background-image: url(/images/about/mobilebg.png);
+}
+.bg-header {
+  background-image: url(/images/header/bg.png);
+}
 .bg-subscribe {
   background-image: url(/images/footer/subscribebg.png);
+}
+.bg-contain {
+  background-size: contain;
 }
 .bg-cover {
   background-size: cover;
@@ -638,19 +647,26 @@ video {
 .p-footerLinks {
   padding: 100px 0px 50px 0px;
 }
+.p-stats {
+  padding: 0px 0px 30rem 0px;
+}
 .p-steps {
   padding: 400px 1rem 0px 1rem;
 }
 .p-subscribe {
   padding: 30px 20px 30px 20px;
 }
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
-}
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -660,6 +676,10 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -667,6 +687,10 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -676,18 +700,17 @@ video {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
 }
+.pt-20 {
+  padding-top: 5rem;
+}
 .pt-32 {
   padding-top: 8rem;
-}
-.pt-40 {
-  padding-top: 10rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -711,10 +734,6 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 .text-5xl {
   font-size: 3rem;
@@ -771,6 +790,10 @@ video {
 }
 @media (min-width: 640px) {
 
+  .sm\:p-statsSm {
+    padding: 0px 0px 40rem 0px;
+  }
+
   .sm\:text-headerSm {
     font-size: 60px;
   }
@@ -813,6 +836,10 @@ video {
     display: flex;
   }
 
+  .lg\:w-aboutMobile {
+    width: 40rem;
+  }
+
   .lg\:w-min {
     width: -moz-min-content;
     width: min-content;
@@ -842,8 +869,23 @@ video {
     padding: 94px 55px;
   }
 
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .lg\:pb-20 {
     padding-bottom: 5rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-headerLg {
@@ -866,6 +908,10 @@ video {
     margin-right: 5rem;
   }
 
+  .xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .xl\:mr-44 {
     margin-right: 11rem;
   }
@@ -878,6 +924,27 @@ video {
     flex-direction: row;
   }
 
+  .xl\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .xl\:border-b {
+    border-bottom-width: 1px;
+  }
+
+  .xl\:border-r {
+    border-right-width: 1px;
+  }
+
+  .xl\:border-solid {
+    border-style: solid;
+  }
+
+  .xl\:border-gray-300 {
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  }
+
   .xl\:bg-contain {
     background-size: contain;
   }
@@ -886,9 +953,22 @@ video {
     padding: 107px 2rem 263px 2rem;
   }
 
+  .xl\:p-statsLg {
+    padding: 0px 3rem 5rem 3rem;
+  }
+
   .xl\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .xl\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .xl\:pb-40 {
+    padding-bottom: 10rem;
   }
 
   .xl\:pt-40 {
