--- a/src/styles/tw-output.css
+++ b/src/styles/tw-output.css
@@ -549,7 +549,7 @@ video {
   max-width: 1747px;
 }
 .max-w-content {
-  max-width: 1400px;
+  max-width: 1200px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -654,7 +654,7 @@ video {
   padding: 400px 1rem 0px 1rem;
 }
 .p-subscribe {
-  padding: 30px 20px 30px 20px;
+  padding: 80px 20px 80px 20px;
 }
 .px-10 {
   padding-left: 2.5rem;
@@ -751,7 +751,7 @@ video {
   line-height: 1.25rem;
 }
 .text-subscribe {
-  font-size: 37px;
+  font-size: 24px;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -799,14 +799,10 @@ video {
   }
 
   .sm\:text-subscribeSm {
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 @media (min-width: 768px) {
-
-  .md\:text-subscribeMd {
-    font-size: 43px;
-  }
 
   .md\:text-xl {
     font-size: 1.25rem;
@@ -973,5 +969,11 @@ video {
 
   .xl\:pt-40 {
     padding-top: 10rem;
+  }
+}
+@media (min-width: 1536px) {
+
+  .\32xl\:max-w-contentXl {
+    max-width: 1400px;
   }
 }
