--- a/src/styles/tw-output.css
+++ b/src/styles/tw-output.css
@@ -560,6 +560,11 @@ video {
 .flex-1 {
   flex: 1 1 0%;
 }
+.scale-75 {
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .flex-col {
   flex-direction: column;
 }
@@ -654,7 +659,7 @@ video {
   padding: 100px 0px 50px 0px;
 }
 .p-steps {
-  padding: 400px 1rem 0px 1rem;
+  padding: 160px 1rem 0px 1rem;
 }
 .p-subscribe {
   padding: 80px 20px 80px 20px;
@@ -667,13 +672,13 @@ video {
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -702,10 +707,6 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 .pb-20 {
   padding-bottom: 5rem;
@@ -756,9 +757,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-.text-subscribe {
-  font-size: 3rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -869,6 +867,12 @@ video {
     max-width: 1200px;
   }
 
+  .lg\:scale-100 {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -928,10 +932,6 @@ video {
     margin-right: 5rem;
   }
 
-  .xl\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .xl\:mr-44 {
     margin-right: 11rem;
   }
@@ -971,10 +971,6 @@ video {
   .xl\:border-gray-300 {
     --tw-border-opacity: 1;
     border-color: rgb(209 213 219 / var(--tw-border-opacity));
-  }
-
-  .xl\:bg-contain {
-    background-size: contain;
   }
 
   .xl\:bg-cover {
